syntax = "proto3";

option go_package = "../service";

package service;

message User {
  int32 id = 1;
  string name = 2;
  string email = 3;
}

service UserService {
  rpc AddUser(User) returns (AddUserResponse);
  rpc GetUser(GetUserRequest) returns (User);
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
}

message AddUserResponse {
  int32 user_id = 1;
}

message GetUserRequest {
  int32 user_id = 1;
}

message ListUsersRequest {}

message ListUsersResponse {
  repeated User users = 1;
}
